added error methods for testing part, added exists condition in fileByUsername method in serviceimpl and throwed 500 response for invalid file path, created dynamic path to store a file.